fixed unaligned img

--- a/index.css
+++ b/index.css
@@ -1,17 +1,21 @@
 body{
     background-color: cornflowerblue;
+    display: flex;
+    flex-direction: column;
 }
 
 h1{
     text-align: center;
     color: brown;
 }
-
+div{
+    display: flex;
+    flex-direction: column;
+}
 img{
     height: 200px;
     width: 250px;
-    position: relative;
-    left: 200px;
+align-self: center;
 }
 p{
     padding: 20px;
